CKA/LABS/Domain 3: Services and Networking/LoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-loadbalncer
spec:
  type: LoadBalancer
  selector:
    run: nginx
  ports:
  - port: 80
    protocol: TCP

# k run nginx --image=nginx --port=80
