CKA/LABS/Domain 3: Services and Networking/NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-nodeport
spec:
  type: NodePort
  selector:
    run: nginx
  ports:
  - port: 80
    targetPort: 80

# k run nginx --image=nginx --port=80
