CKA/LABS/Domain 3: Services and Networking/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: kplabs-service
subsets:
- addresses:
  - ip: 10.244.0.124
  - ip: 10.244.0.107
  ports:
  - port: 80
