CKA/LABS/Domain 3: Services and Networking/service-selector.yml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-service-selector
spec:
  selector:
    app: nxinx
  ports:
  - port: 80
    targetPort: 80
